--- a/src/core/src/AXOpen.Core.Blazor/AxoDialogs/ModalDialog.razor
+++ b/src/core/src/AXOpen.Core.Blazor/AxoDialogs/ModalDialog.razor
@@ -1,5 +1,5 @@
 ﻿
-<div class="modal modal-xl @modalClass" tabindex="-1" role="dialog" style="display:@modalDisplay; overflow-y: auto; ">
+<div class="modal modal-xl @_modalClass" tabindex="-1" role="dialog" style="display:@_modalDisplay; overflow-y: auto; ">
     <div class="modal-dialog mw-100 w-75 modal-dialog-centered" style="align-items: flex-end;" role="document">
         <div class="modal-content">
             <div class="modal-header">
@@ -13,7 +13,7 @@
     </div>
 </div>
 
-@if (showBackdrop)
+@if (_showBackdrop)
 {
     <div class="modal-backdrop fade show"></div>
 }
@@ -26,28 +26,23 @@
     [Parameter]
     public RenderFragment HeaderTemplate { get; set; }
 
-    private string modalDisplay = "none;";
-    private string modalClass = string.Empty;
-    private bool showBackdrop = false;
+    private string _modalDisplay = "none;";
+    private string _modalClass = string.Empty;
+    private bool _showBackdrop = false;
 
     public async Task Open()
     {
-        modalDisplay = "flex";
-        modalClass = "show";
-        showBackdrop = true;
+        _modalDisplay = "flex";
+        _modalClass = "show";
+        _showBackdrop = true;
         await InvokeAsync(StateHasChanged);
-        await Task.Delay(200);
-        
-
     }
 
     public async Task Close()
     {
-        modalDisplay = "none";
-        modalClass = string.Empty;
-        showBackdrop = false;
+        _modalDisplay = "none";
+        _modalClass = string.Empty;
+        _showBackdrop = false;
         await InvokeAsync(StateHasChanged);
-        await Task.Delay(200);
-        
     }
 }
