--- a/src/templates.simple/axosimple.app/Pages/UI/ManipulatorExample.razor
+++ b/src/templates.simple/axosimple.app/Pages/UI/ManipulatorExample.razor
@@ -25,6 +25,8 @@
 
 <AxoDialogLocator DialogId="custation001" ObservedObjects="new[] {Entry.Plc.Context.PneumaticManipulator}"></AxoDialogLocator>
 
+@*<AXOpen.Core.Blazor.Dialogs.AxoAlertDialogLocator ObservedObjects="new[] {Entry.Plc.Context.PneumaticManipulator}"></AXOpen.Core.Blazor.Dialogs.AxoAlertDialogLocator>*@
+
 
 <button class="btn btn-primary" @onclick="@showAlert">Show alert</button>
 
