--- a/src/templates.simple/axosimple.app/Pages/_Host.cshtml
+++ b/src/templates.simple/axosimple.app/Pages/_Host.cshtml
@@ -11,11 +11,31 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <base href="~/" />
-    @*<link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />*@
-    <link rel="stylesheet" href="~/css/custom/ix-bootstrap.css">
+    
+    @*Custom Bootstrap*@
+    @switch (Request.Cookies["theme"])
+    {
+        case "mts":
+            <link rel="stylesheet" href="~/css/custom/mts.css" />
+            break;
+        case "tropical":
+            <link rel="stylesheet" href="~/css/custom/tropical.css" />
+            break;
+        case "jupiter":
+            <link rel="stylesheet" href="~/css/custom/jupiter.css" />
+            break;
+        default:
+            <link rel="stylesheet" href="~/css/bootstrap/bootstrap.css" />
+            break;
+    }
+
+    @*Icons*@
     <link rel="stylesheet" href="css/open-iconic/font/css/open-iconic-bootstrap.min.css" />
+    @*Custom site css*@
     <link href="css/site.css" rel="stylesheet" />
+    @*Component css*@
     <link href="axosimple.hmi.styles.css" rel="stylesheet" />
+
     <link rel="icon" type="image/png" href="favicon.png" />
     
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
