Theme picker to reflect current theme

--- a/src/templates.simple/axosimple.app/Pages/Index.razor
+++ b/src/templates.simple/axosimple.app/Pages/Index.razor
@@ -2,14 +2,20 @@
 
 @page "/"
 
-<select class="form-select" aria-label="Theme select" @bind="Theme" @bind:event="oninput">
-    <option selected>Choose color theme</option>
-    <option value="mts">MTS default</option>
-    <option value="tropical">Tropical</option>
-    <option value="jupiter">Jupiter</option>
+<label>Choose a theme</label>
+<select class="form-control" @bind="Theme" @bind:event="oninput">
+    <option value="bootstrap" selected="@(CurrentTheme == "bootstrap")">Bootstrap default</option>
+    <option value="mts" selected="@(CurrentTheme == "mts")"> MTS</option>
+    <option value="tropical" selected="@(CurrentTheme == "tropical")">Tropical</option>
+    <option value="jupiter" selected="@(CurrentTheme == "jupiter")">Jupiter</option>
 </select>
 
 @code {
+    [Inject]
+    IHttpContextAccessor HttpContextAccessor { get; set; }
+
+    public string CurrentTheme { get; set; }
+
     private string theme;
     public string Theme
     {
@@ -19,5 +25,10 @@
             theme = value;
             NavigationManager.NavigateTo($"/theme?theme={theme}", true);
         }
+    }
+
+    protected override void OnInitialized()
+    {
+        CurrentTheme = HttpContextAccessor.HttpContext.Request.Cookies["theme"] ?? "bootstrap";
     }
 }
