fixed inconsistencies with alerts dialog on multiple clients, include possibility to change alerts type, refactoring and bug fixing

--- a/src/core/src/AXOpen.Core.Blazor/AxoAlertDialog/AxoAlertToast.razor
+++ b/src/core/src/AXOpen.Core.Blazor/AxoAlertDialog/AxoAlertToast.razor
@@ -67,6 +67,12 @@
     [Inject]
     private IAlertDialogService _dialogService { get; set; }
 
+    [Parameter]
+    public IAlertDialogService _dialogServiceParameter { get; set; }
+    [Parameter]
+    public bool UseScopedAlerts { get; set; }
+
+
     private string GetTime(DateTimeOffset time)
     {
         var calcTime = -(time - DateTimeOffset.Now);
