--- a/src/templates.simple/axosimple.app/Shared/MainLayout.razor
+++ b/src/templates.simple/axosimple.app/Shared/MainLayout.razor
@@ -13,6 +13,6 @@
 
    <AXOpen.Core.Blazor.AxoAlertDialog.AxoAlertToast></AXOpen.Core.Blazor.AxoAlertDialog.AxoAlertToast>
 
-    @*<AXOpen.Core.Blazor.Dialogs.AxoAlertDialogLocator ObservedObjects="new[] {Entry.Plc.Context.PneumaticManipulator}" />*@
+    <AXOpen.Core.Blazor.Dialogs.AxoAlertDialogLocator ObservedObjects="new[] {Entry.Plc.Context.PneumaticManipulator}" UseScopedAlerts=false></AXOpen.Core.Blazor.Dialogs.AxoAlertDialogLocator>
 
 </div>
