--- a/src/core/src/AXOpen.Core.Blazor/AxoAlertDialog/AxoAlertDialogLocator.razor
+++ b/src/core/src/AXOpen.Core.Blazor/AxoAlertDialog/AxoAlertDialogLocator.razor
@@ -1,54 +1,56 @@
-﻿@*@namespace AXOpen.Core.Blazor.Dialogs
+﻿@namespace AXOpen.Core.Blazor.Dialogs
+@using AXOpen.Base.Abstractions.Dialogs;
 @using AXOpen.Base.Dialogs;
+@using AXOpen.Core.Blazor.AxoAlertDialog;
 @using AXOpen.Core.Blazor.AxoDialogs.Hubs;
 @using AXOpen.Core.Blazor.AxoDialogs;
 @using AXOpen.Dialogs;
 @using AXSharp.Connector;
-@inject IAxoDialogProxyServiceSingleton _dialogService
-@inject IAlertDialogService _alertDialogService
+@inject AxoAlertDialogProxyService _dialogProxyService
+@inject IAlertDialogService _scopedAlerts
 @implements IDisposable
 
-
-
-
-
-@if (_dialogService.DialogInstance != null)
-{
-    if (_dialogService.DialogInstance is AXOpen.Core.AxoAlertDialog)
-    {
-        AXOpen.Core.AxoAlertDialog a = (AXOpen.Core.AxoAlertDialog)_dialogService.DialogInstance;
-        _alertDialogService.AddAlertDialog( (eAlertDialogType)a._dialogType.Cyclic, a._title.Cyclic, a._message.Cyclic, a._timeToBurn.Cyclic);
-        _dialogService.DialogInstance = null;
-    }
-}
+<AxoAlertToast _dialogServiceParameter="_dialogProxyService.DialogService" UseScopedAlerts="@UseScopedAlerts"></AxoAlertToast>
 
 @code {
     [Parameter]
     public IEnumerable<ITwinObject> ObservedObjects { get; set; }
+    [Parameter]
+    public bool UseScopedAlerts { get; set; }
 
-    protected override void OnInitialized()
+    protected override void OnAfterRender(bool firstRender)
     {
-        if (ObservedObjects != null)
-            _dialogService.SetObservedObjects(ObservedObjects);
-        
-        _dialogService.DialogInvoked += OnDialogInvoked;
-        base.OnInitialized();   
+        if (firstRender)
+        {
+            if (ObservedObjects != null)
+                _dialogProxyService.SetObservedObjects(ObservedObjects);
+
+            _dialogProxyService.AlertDialogInvoked += OnDialogInvoked;
+        }
+
     }
 
     public async void OnDialogInvoked(object sender, AxoDialogEventArgs e)
     {
-        if (_dialogService.DialogInstance is AXOpen.Core.AxoAlertDialog)
+        if (_dialogProxyService.DialogInstance is AXOpen.Core.AxoAlertDialog)
         {
-            AXOpen.Core.AxoAlertDialog a = (AXOpen.Core.AxoAlertDialog)_dialogService.DialogInstance;
-            _alertDialogService.AddAlertDialog((eAlertDialogType)a._dialogType.Cyclic, a._title.Cyclic, a._message.Cyclic, a._timeToBurn.Cyclic);
-            _dialogService.DialogInstance = null;
+            AXOpen.Core.AxoAlertDialog a = (AXOpen.Core.AxoAlertDialog)_dialogProxyService.DialogInstance;
+            if (UseScopedAlerts)
+            {
+                _scopedAlerts.AddAlertDialog((eAlertDialogType)a._dialogType.Cyclic, a._title.Cyclic, a._message.Cyclic, a._timeToBurn.Cyclic);
+            }
+            else
+            {
+                _dialogProxyService.DialogService.AddAlertDialog((eAlertDialogType)a._dialogType.Cyclic, a._title.Cyclic, a._message.Cyclic, a._timeToBurn.Cyclic);
+            }
+            _dialogProxyService.DialogInstance = null;
+            await InvokeAsync(StateHasChanged);
         }
-        await InvokeAsync(StateHasChanged);
+       
     }
     
     public void Dispose()
     {
-        _dialogService.DialogInvoked -= OnDialogInvoked;
+        _dialogProxyService.AlertDialogInvoked -= OnDialogInvoked;
     }
 }
-*@
