--- a/src/core/src/AXOpen.Core.Blazor/AxoDialogs/AxoDialogLocator.razor
+++ b/src/core/src/AXOpen.Core.Blazor/AxoDialogs/AxoDialogLocator.razor
@@ -1,4 +1,5 @@
 ﻿@namespace AXOpen.Core.Blazor.AxoDialogs
+@using AXOpen.Base.Abstractions.Dialogs;
 @using AXOpen.Core.Blazor.AxoDialogs.Hubs;
 @using AXOpen.Dialogs;
 @using AXSharp.Connector;
@@ -31,7 +32,7 @@
     [Parameter]
     public string DialogId { get; set; }
     /// <summary>
-    /// The opening dialog delay. Ff you have problems with dialogs opening on slower PC, increase dialog delay (Default value is 100 ms).
+    /// The opening dialog delay. If you have problems with dialogs opening on slower PC, increase dialog delay (Default value is 100 ms).
     /// </summary>
     [Parameter]
     public int DialogOpenDelay { get; set; } = 100;
@@ -51,8 +52,7 @@
         }
 
         //try to acquire existing dialog service instance
-        AxoDialogProxyService proxy;
-        var proxyExists = _dialogContainer.DialogProxyServicesDictionary.TryGetValue(DialogId, out proxy);
+        var proxyExists = _dialogContainer.DialogProxyServicesDictionary.TryGetValue(DialogId, out AxoDialogProxyService proxy);
 
         if (!proxyExists)
         {
