--- a/src/data/src/AXOpen.Data.Blazor/AxoDataExchange/DataExchangeView.razor
+++ b/src/data/src/AXOpen.Data.Blazor/AxoDataExchange/DataExchangeView.razor
@@ -422,14 +422,16 @@ else
                 </div>
                 <div class="modal-body">
                     <div class="accordion">
-                        @{bool firstIteration = true;}
+                        @{
+                            bool firstIteration = true;
+                        }
                         @foreach (var fragment in Vm.DataExchange.RefUIData.GetChildren().DefaultIfEmpty(Vm.DataExchange.RefUIData))
                         {
                             <div class="accordion-item">
                                 <div class="accordion-header">
                                     <div class="input-group flex-nowrap">
                                         <div class="input-group-text bg-transparent border-0">
-                                            <input class="form-check-input mt-0" type="checkbox" value="" checked @onchange="@((ChangeEventArgs __e) => Vm.ChangeFragmentsValue(__e, fragment.ToString()))">
+                                            <input class="form-check-input mt-0" type="checkbox" value="" checked @onchange="@((ChangeEventArgs __e) => Vm.ChangeCustomExportDataValue(__e, fragment.ToString()))">
                                         </div>
                                         <button class="accordion-button @(firstIteration ? "" : "collapsed")" type="button" data-bs-toggle="collapse" data-bs-target="#@fragment.ToString().Replace(".", "_")-@ViewGuid" aria-expanded="@(firstIteration ? "true" : "false")" aria-controls="@fragment.ToString().Replace(".", "_")-@ViewGuid">
                                             @fragment.ToString()
@@ -439,12 +441,19 @@ else
                                 <div id="@fragment.ToString().Replace(".", "_")-@ViewGuid" class="accordion-collapse collapse @(firstIteration ? "show" : "")">
                                     <div class="accordion-body">
                                         <ul class="list-group">
-                                            @foreach (var item in Vm.GetValueTags(fragment))
+                                            @foreach (var item in Vm.GetValueTags(fragment.GetType()))
                                             {
-                                                <li class="list-group-item">
-                                                    <input class="form-check-input me-1" type="checkbox" value="" id="@fragment.ToString()-@item.Symbol-@ViewGuid" checked @onchange="@((ChangeEventArgs __e) => Vm.ChangeFragmentDataValue(__e, item.Symbol, fragment.ToString()))">
-                                                    <label class="form-check-label" for="@fragment.ToString()-@item.Symbol-@ViewGuid">@item.Symbol</label>
-                                                </li>
+                                                @if (item is ITwinPrimitive)
+                                                {
+                                                    <li class="list-group-item">
+                                                        <input class="form-check-input me-1" type="checkbox" value="" id="@fragment.ToString()-@item.Symbol-@ViewGuid" checked @onchange="@((ChangeEventArgs __e) => Vm.ChangeCustomExportDataValue(__e, fragment.ToString(), item.Symbol))">
+                                                        <label class="form-check-label ms-3" for="@fragment.ToString()-@item.Symbol-@ViewGuid">@item.GetSymbolTail()</label>
+                                                    </li>
+                                                }
+                                                else if (item is ITwinObject)
+                                                {
+                                                    <AXOpen.Data.Blazor.AxoDataExchange.DataExchangeAccordionComponent AccordionContent="item" Vm="Vm" Fragment="fragment" Parent="_data" ViewGuid="ViewGuid" />
+                                                }
                                             }
                                         </ul>
                                     </div>
@@ -453,36 +462,40 @@ else
                             firstIteration = false;
                         }
                     </div>
-                    <div class="input-group mt-2">
-                        <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">@Vm.ExportMode</button>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item @(Vm.ExportMode == eExportMode.First ? "active" : "")" @onclick="() => Vm.ExportMode = eExportMode.First">First</a></li>
-                            <li><a class="dropdown-item @(Vm.ExportMode == eExportMode.Last ? "active" : "")" @onclick="() => Vm.ExportMode = eExportMode.Last">Last</a></li>
-                            <li><a class="dropdown-item @(Vm.ExportMode == eExportMode.Exact ? "active" : "")" @onclick="() => Vm.ExportMode = eExportMode.Exact">Exact</a></li>
-                        </ul>
-                        @if (Vm.ExportMode == eExportMode.Exact)
-                        {
-                            <div class="input-group-text">From</div>
-                            <input type="text" class="form-control" placeholder="From" @bind="Vm.FirstNumber">
-                            <div class="input-group-text">To</div>
-                            <input type="text" class="form-control" placeholder="To" @bind="Vm.SecondNumber">
-                        }
-                        else
-                        {
-                            <input type="text" class="form-control" @bind="Vm.FirstNumber">
-                        }
-                        <div class="input-group-text">records</div>
-                    </div>
-                    <div class="btn-group mt-2" role="group" aria-label="File type">
-                        <button type="button" class="btn @(Vm.ExportFileType == eFileType.csv ? "btn-primary" : "btn-outline-primary")" @onclick="() => Vm.ExportFileType = eFileType.csv">csv</button>
-                        <button type="button" class="btn @(Vm.ExportFileType == eFileType.txt ? "btn-primary" : "btn-outline-primary")" @onclick="() => Vm.ExportFileType = eFileType.txt">txt</button>
-                    </div>
-                    <div class="input-group mt-2 d-inline-flex w-25 align-middle">
-                        <span class="input-group-text">Separator</span>
-                        <input type="text" class="form-control" placeholder="Separator" aria-label="Separator" @bind="Vm.Separator">
-                    </div>
                 </div>
                 <div class="modal-footer">
+                    <div class="col-12">
+                        <div class="input-group mt-2">
+                            <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">@Vm.ExportMode</button>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item @(Vm.ExportMode == eExportMode.First ? "active" : "")" @onclick="() => Vm.ExportMode = eExportMode.First">First</a></li>
+                                <li><a class="dropdown-item @(Vm.ExportMode == eExportMode.Last ? "active" : "")" @onclick="() => Vm.ExportMode = eExportMode.Last">Last</a></li>
+                                <li><a class="dropdown-item @(Vm.ExportMode == eExportMode.Exact ? "active" : "")" @onclick="() => Vm.ExportMode = eExportMode.Exact">Exact</a></li>
+                            </ul>
+                            @if (Vm.ExportMode == eExportMode.Exact)
+                            {
+                                <div class="input-group-text">From</div>
+                                <input type="text" class="form-control" placeholder="From" @bind="Vm.FirstNumber">
+                                <div class="input-group-text">To</div>
+                                <input type="text" class="form-control" placeholder="To" @bind="Vm.SecondNumber">
+                            }
+                            else
+                            {
+                                <input type="text" class="form-control" @bind="Vm.FirstNumber">
+                            }
+                            <div class="input-group-text">records</div>
+                        </div>
+                    </div>
+                    <div class="col-12">
+                        <div class="btn-group mt-2" role="group" aria-label="File type">
+                            <button type="button" class="btn @(Vm.ExportFileType == eFileType.csv ? "btn-primary" : "btn-outline-primary")" @onclick="() => Vm.ExportFileType = eFileType.csv">csv</button>
+                            <button type="button" class="btn @(Vm.ExportFileType == eFileType.txt ? "btn-primary" : "btn-outline-primary")" @onclick="() => Vm.ExportFileType = eFileType.txt">txt</button>
+                        </div>
+                        <div class="input-group mt-2 d-inline-flex w-25 align-middle">
+                            <span class="input-group-text">Separator</span>
+                            <input type="text" class="form-control" placeholder="Separator" aria-label="Separator" @bind="Vm.Separator">
+                        </div>
+                    </div>
                     @if (!Vm.GetFragmentsExportedValue())
                     {
                         <div class="alert alert-danger d-flex align-items-center m-0 p-2" role="alert">
