wip on documentation

--- a/src/templates.simple/axosimple.app/Pages/UI/ManipulatorExample.razor
+++ b/src/templates.simple/axosimple.app/Pages/UI/ManipulatorExample.razor
@@ -28,7 +28,7 @@
 @*<AXOpen.Core.Blazor.Dialogs.AxoAlertDialogLocator ObservedObjects="new[] {Entry.Plc.Context.PneumaticManipulator}" UseScopedAlerts=true></AXOpen.Core.Blazor.Dialogs.AxoAlertDialogLocator>*@
 
 
-<button class="btn btn-primary" @onclick="@showAlert">Show alert</button>
+@*<button class="btn btn-primary" @onclick="@showAlert">Show alert</button>*@
 
 
 @code
