--- a/src/templates.simple/axosimple.app/Shared/MainLayout.razor
+++ b/src/templates.simple/axosimple.app/Shared/MainLayout.razor
@@ -1,4 +1,6 @@
 ﻿@inherits LayoutComponentBase
+@using AXOpen.Core.Blazor.AxoAlertDialog
+@using AXOpen.Core.Blazor.Dialogs
 
 <PageTitle>ix-draft-blazor</PageTitle>
 
@@ -11,8 +13,8 @@
     </main>
     <NavMenu />
 
-   <AXOpen.Core.Blazor.AxoAlertDialog.AxoAlertToast></AXOpen.Core.Blazor.AxoAlertDialog.AxoAlertToast>
+   <AxoAlertToast></AxoAlertToast>
 
-    <AXOpen.Core.Blazor.Dialogs.AxoAlertDialogLocator ObservedObjects="new[] {Entry.Plc.Context.PneumaticManipulator}" UseScopedAlerts=false></AXOpen.Core.Blazor.Dialogs.AxoAlertDialogLocator>
+    <AxoAlertDialogLocator ObservedObjects="new[] {Entry.Plc.Context.PneumaticManipulator}" UseScopedAlerts=false/>
 
 </div>
