[mts-template] add theming support (#124)
* Create draft PR for #123

* Handle modulo by zero exception

* Add bootstrap resource

* Layout style changes

* Navigation, breadcrumb style changes

* Dynamically change color theme

* Theme picker to reflect current theme

* LoginDisplay position fix

* Themes documentation

---------

Co-authored-by: TimothyBucka <TimothyBucka@users.noreply.github.com>
Co-authored-by: TimothyBucka <timotej.bucka@gmail.com>
Co-authored-by: David Spavor <56168909+Specter-13@users.noreply.github.com>

--- a/src/templates.simple/axosimple.app/Pages/Index.razor
+++ b/src/templates.simple/axosimple.app/Pages/Index.razor
@@ -1,3 +1,34 @@
-﻿@page "/"
+﻿@inject NavigationManager NavigationManager
 
-<PageTitle>Index</PageTitle>
+@page "/"
+
+<label>Choose a theme</label>
+<select class="form-control" @bind="Theme" @bind:event="oninput">
+    <option value="bootstrap" selected="@(CurrentTheme == "bootstrap")">Bootstrap default</option>
+    <option value="mts" selected="@(CurrentTheme == "mts")"> MTS</option>
+    <option value="tropical" selected="@(CurrentTheme == "tropical")">Tropical</option>
+    <option value="jupiter" selected="@(CurrentTheme == "jupiter")">Jupiter</option>
+</select>
+
+@code {
+    [Inject]
+    IHttpContextAccessor HttpContextAccessor { get; set; }
+
+    public string CurrentTheme { get; set; }
+
+    private string theme;
+    public string Theme
+    {
+        get => theme;
+        set
+        {
+            theme = value;
+            NavigationManager.NavigateTo($"/theme?theme={theme}", true);
+        }
+    }
+
+    protected override void OnInitialized()
+    {
+        CurrentTheme = HttpContextAccessor.HttpContext.Request.Cookies["theme"] ?? "bootstrap";
+    }
+}
