--- a/src/templates.simple/axosimple.app/Pages/_Host.cshtml
+++ b/src/templates.simple/axosimple.app/Pages/_Host.cshtml
@@ -11,10 +11,34 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <base href="~/" />
-    <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+
+    @*Custom Bootstrap*@
+    @switch (Request.Cookies["theme"])
+    {
+        case "bootstrap":
+            <link rel="stylesheet" href="~/css/custom/bootstrap_default_custom.css" />
+            break;
+        case "mts":
+            <link rel="stylesheet" href="~/css/custom/mts.css" />
+            break;
+        case "tropical":
+            <link rel="stylesheet" href="~/css/custom/tropical.css" />
+            break;
+        case "jupiter":
+            <link rel="stylesheet" href="~/css/custom/jupiter.css" />
+            break;
+        default:
+            <link rel="stylesheet" href="~/css/custom/bootstrap_default_custom.css" />
+            break;
+    }
+
+    @*Icons*@
+    <link rel="stylesheet" href="css/open-iconic/font/css/open-iconic-bootstrap.min.css" />
+    @*Custom site css*@
     <link href="css/site.css" rel="stylesheet" />
+    @*Component css*@
     <link href="axosimple.hmi.styles.css" rel="stylesheet" />
+
     <link rel="icon" type="image/png" href="favicon.png" />
     
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
@@ -35,6 +59,6 @@
     </div>
 
     <script src="_framework/blazor.server.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </body>
 </html>
