--- a/src/core/src/AXOpen.Core.Blazor/AxoDialogs/AxoDialogLocator.razor
+++ b/src/core/src/AXOpen.Core.Blazor/AxoDialogs/AxoDialogLocator.razor
@@ -32,7 +32,7 @@
     [Parameter]
     public string DialogId { get; set; }
     /// <summary>
-    /// The opening dialog delay. If you have problems with dialogs opening on slower PC, increase dialog delay (Default value is 100 ms).
+    /// The opening dialog delay (default value is 100 ms).
     /// </summary>
     [Parameter]
     public int DialogOpenDelay { get; set; } = 100;
