--- a/src/templates.simple/axosimple.app/Pages/UI/ManipulatorExample.razor
+++ b/src/templates.simple/axosimple.app/Pages/UI/ManipulatorExample.razor
@@ -30,16 +30,27 @@
 
 
 @*<button class="btn btn-primary" @onclick="@showAlert">Show alert</button>*@
-
+<div @ref="keyDownDiv" @onkeydown="KeyPress"></div>
 
 @code
 {
+    private ElementReference keyDownDiv;
     private ModalDialog ModalDialog { get; set; }
     private IEnumerable<AxoMessenger> Messengers => Entry.Plc.Context.PneumaticManipulator.GetChildren().Flatten(p => p.GetChildren()).OfType<AxoMessenger>();
     private void showAlert()
     {
         _alerts.AddAlertDialog(eAlertDialogType.Info, "Ahoj", "som dialog", 5);
         StateHasChanged();
+    }
+
+    private void KeyPress()
+    {
+        Console.WriteLine("PRESSED");
+    }
+
+    protected async override Task OnAfterRenderAsync(bool firstrender)
+    {
+        await keyDownDiv.FocusAsync();
     }
 }
 
