--- a/src/templates.simple/axosimple.app/Pages/UI/Io.razor
+++ b/src/templates.simple/axosimple.app/Pages/UI/Io.razor
@@ -44,10 +44,12 @@
     private void Clicked()
     {
         Entry.Plc.Context.PneumaticManipulator.AutomatSequence._externalClose.Edit = true;
+        Entry.Plc.Context.PneumaticManipulator2.AutomatSequence._externalClose.Edit = true;
     }
 
     private void Clicked2()
     {
         Entry.Plc.Context.PneumaticManipulator.AutomatSequence._externalClose.Edit = false;
+        Entry.Plc.Context.PneumaticManipulator2.AutomatSequence._externalClose.Edit = false;
     }
 }
